// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drop_operator.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "definition": [
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 42,
                    "names": [
                      {
                        "String": {
                          "sval": "int8eq",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "procedure",
                "location": 30,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 68,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "leftarg",
                "location": 58,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 95,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "rightarg",
                "location": 84,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "===",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "commutator",
                "location": 111,
              },
            },
          ],
          "defnames": [
            {
              "String": {
                "sval": "===",
              },
            },
          ],
          "kind": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "definition": [
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "int8ne",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "procedure",
                "location": 32,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 70,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "leftarg",
                "location": 60,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 97,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "rightarg",
                "location": 86,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "===",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "negator",
                "location": 113,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "!==",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "commutator",
                "location": 136,
              },
            },
          ],
          "defnames": [
            {
              "String": {
                "sval": "!==",
              },
            },
          ],
          "kind": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 20,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 28,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "!==",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "fk",
                },
                "inh": true,
                "location": 31,
                "relname": "pg_operator",
                "relpersistence": "p",
                "schemaname": "pg_catalog",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 10,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 10,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 16,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "oprcom",
                        },
                      },
                    ],
                    "location": 16,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "oprcom",
                            },
                          },
                        ],
                        "location": 65,
                      },
                    },
                    "location": 72,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 75,
                      },
                    },
                  },
                },
                {
                  "BoolExpr": {
                    "args": [
                      {
                        "SubLink": {
                          "location": 93,
                          "subLinkType": "EXISTS_SUBLINK",
                          "subselect": {
                            "SelectStmt": {
                              "fromClause": [
                                {
                                  "RangeVar": {
                                    "alias": {
                                      "aliasname": "pk",
                                    },
                                    "inh": true,
                                    "location": 114,
                                    "relname": "pg_operator",
                                    "relpersistence": "p",
                                    "schemaname": "pg_catalog",
                                  },
                                },
                              ],
                              "limitOption": "LIMIT_OPTION_DEFAULT",
                              "op": "SETOP_NONE",
                              "targetList": [
                                {
                                  "ResTarget": {
                                    "location": 107,
                                    "val": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 107,
                                      },
                                    },
                                  },
                                },
                              ],
                              "whereClause": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "pk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oid",
                                          },
                                        },
                                      ],
                                      "location": 146,
                                    },
                                  },
                                  "location": 153,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "=",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "fk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oprcom",
                                          },
                                        },
                                      ],
                                      "location": 155,
                                    },
                                  },
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "NOT_EXPR",
                    "location": 89,
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 77,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "fk",
                },
                "inh": true,
                "location": 34,
                "relname": "pg_operator",
                "relpersistence": "p",
                "schemaname": "pg_catalog",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 10,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 10,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 16,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "oprnegate",
                        },
                      },
                    ],
                    "location": 16,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "oprnegate",
                            },
                          },
                        ],
                        "location": 68,
                      },
                    },
                    "location": 78,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 81,
                      },
                    },
                  },
                },
                {
                  "BoolExpr": {
                    "args": [
                      {
                        "SubLink": {
                          "location": 99,
                          "subLinkType": "EXISTS_SUBLINK",
                          "subselect": {
                            "SelectStmt": {
                              "fromClause": [
                                {
                                  "RangeVar": {
                                    "alias": {
                                      "aliasname": "pk",
                                    },
                                    "inh": true,
                                    "location": 120,
                                    "relname": "pg_operator",
                                    "relpersistence": "p",
                                    "schemaname": "pg_catalog",
                                  },
                                },
                              ],
                              "limitOption": "LIMIT_OPTION_DEFAULT",
                              "op": "SETOP_NONE",
                              "targetList": [
                                {
                                  "ResTarget": {
                                    "location": 113,
                                    "val": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 113,
                                      },
                                    },
                                  },
                                },
                              ],
                              "whereClause": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "pk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oid",
                                          },
                                        },
                                      ],
                                      "location": 152,
                                    },
                                  },
                                  "location": 159,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "=",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "fk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oprnegate",
                                          },
                                        },
                                      ],
                                      "location": 161,
                                    },
                                  },
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "NOT_EXPR",
                    "location": 95,
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 83,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 20,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 28,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "===",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "definition": [
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "int8lt",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "procedure",
                "location": 31,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 69,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "leftarg",
                "location": 59,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 96,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "rightarg",
                "location": 85,
              },
            },
          ],
          "defnames": [
            {
              "String": {
                "sval": "<|",
              },
            },
          ],
          "kind": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "definition": [
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "int8gt",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "procedure",
                "location": 31,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 69,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "leftarg",
                "location": 59,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 96,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "rightarg",
                "location": 85,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "<|",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "negator",
                "location": 112,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "<|",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "commutator",
                "location": 134,
              },
            },
          ],
          "defnames": [
            {
              "String": {
                "sval": "|>",
              },
            },
          ],
          "kind": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 19,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 27,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "|>",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "fk",
                },
                "inh": true,
                "location": 31,
                "relname": "pg_operator",
                "relpersistence": "p",
                "schemaname": "pg_catalog",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 10,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 10,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 16,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "oprcom",
                        },
                      },
                    ],
                    "location": 16,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "oprcom",
                            },
                          },
                        ],
                        "location": 65,
                      },
                    },
                    "location": 72,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 75,
                      },
                    },
                  },
                },
                {
                  "BoolExpr": {
                    "args": [
                      {
                        "SubLink": {
                          "location": 93,
                          "subLinkType": "EXISTS_SUBLINK",
                          "subselect": {
                            "SelectStmt": {
                              "fromClause": [
                                {
                                  "RangeVar": {
                                    "alias": {
                                      "aliasname": "pk",
                                    },
                                    "inh": true,
                                    "location": 114,
                                    "relname": "pg_operator",
                                    "relpersistence": "p",
                                    "schemaname": "pg_catalog",
                                  },
                                },
                              ],
                              "limitOption": "LIMIT_OPTION_DEFAULT",
                              "op": "SETOP_NONE",
                              "targetList": [
                                {
                                  "ResTarget": {
                                    "location": 107,
                                    "val": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 107,
                                      },
                                    },
                                  },
                                },
                              ],
                              "whereClause": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "pk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oid",
                                          },
                                        },
                                      ],
                                      "location": 146,
                                    },
                                  },
                                  "location": 153,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "=",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "fk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oprcom",
                                          },
                                        },
                                      ],
                                      "location": 155,
                                    },
                                  },
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "NOT_EXPR",
                    "location": 89,
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 77,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "fk",
                },
                "inh": true,
                "location": 34,
                "relname": "pg_operator",
                "relpersistence": "p",
                "schemaname": "pg_catalog",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 10,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 10,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 16,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "oprnegate",
                        },
                      },
                    ],
                    "location": 16,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "oprnegate",
                            },
                          },
                        ],
                        "location": 68,
                      },
                    },
                    "location": 78,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 81,
                      },
                    },
                  },
                },
                {
                  "BoolExpr": {
                    "args": [
                      {
                        "SubLink": {
                          "location": 99,
                          "subLinkType": "EXISTS_SUBLINK",
                          "subselect": {
                            "SelectStmt": {
                              "fromClause": [
                                {
                                  "RangeVar": {
                                    "alias": {
                                      "aliasname": "pk",
                                    },
                                    "inh": true,
                                    "location": 120,
                                    "relname": "pg_operator",
                                    "relpersistence": "p",
                                    "schemaname": "pg_catalog",
                                  },
                                },
                              ],
                              "limitOption": "LIMIT_OPTION_DEFAULT",
                              "op": "SETOP_NONE",
                              "targetList": [
                                {
                                  "ResTarget": {
                                    "location": 113,
                                    "val": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 113,
                                      },
                                    },
                                  },
                                },
                              ],
                              "whereClause": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "pk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oid",
                                          },
                                        },
                                      ],
                                      "location": 152,
                                    },
                                  },
                                  "location": 159,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "=",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "fk",
                                          },
                                        },
                                        {
                                          "String": {
                                            "sval": "oprnegate",
                                          },
                                        },
                                      ],
                                      "location": 161,
                                    },
                                  },
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "NOT_EXPR",
                    "location": 95,
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 83,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`drop_operator.sql > line 55 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 19,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 27,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "<|",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_OPERATOR",
        },
      },
    },
  ],
  "version": 160001,
}
`;
